--- a/lit_calculator/Base.lproj/Main.storyboard
+++ b/lit_calculator/Base.lproj/Main.storyboard
@@ -66,6 +66,9 @@
                                 <state key="normal" title=".">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="clickDotButton" destination="vXZ-lx-hvc" eventType="touchUpInside" id="eET-l8-6Dy"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2pE-PN-jh3">
                                 <rect key="frame" x="202" y="473" width="46" height="54"/>
